Feat: Implement PATCH request for books
